🔧 프리티어 룰은 warning으로 알림

--- a/package.json
+++ b/package.json
@@ -33,7 +33,11 @@
       "eslint:recommended",
       "plugin:prettier/recommended"
     ],
-    "rules": {},
+    "rules": {
+      "prettier/prettier": [
+        "warn"
+      ]
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
