--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "rules": {
       "prettier/prettier": [
         "warn"
-      ]
+      ],
+      "no-console": 0
     },
     "parserOptions": {
       "parser": "babel-eslint"
