--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "deploy": "git subtree push --prefix dist origin master"
+    "deploy": "npm run build && git add dist && git commit -m ':rocket: deploy' && git subtree push --prefix dist origin master"
   },
   "dependencies": {
     "core-js": "^3.4.3",
