--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "what-is-your-otter",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "author": "Yesol Kim <kysloves@naver.com>",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
